@@ -9,6 +9,8 @@ import com.skrstop.ide.databasemcp.settings.McpSettingsState;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.nio.channels.Channels;
+import java.nio.channels.FileChannel;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -29,6 +31,22 @@ public final class McpRuntimeLogService {
     private static final DateTimeFormatter DATATIME_FORMAT = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSS", Locale.ROOT);
 
     private final ReentrantLock lock = new ReentrantLock();
+
+    // 内存环形缓冲区，避免每秒从磁盘读取整个日志文件
+    private final ArrayDeque<String> memoryBuffer = new ArrayDeque<>();
+
+    // 内容版本号，每次 append / clear 递增。UI 层可据此快速判断是否需要刷新，
+    // 避免无新日志时仍然全量拷贝 memoryBuffer + String.join。
+    private final java.util.concurrent.atomic.AtomicLong version = new java.util.concurrent.atomic.AtomicLong();
+
+    // 追踪当前日志文件大小，避免每次 append 都调用 Files.size()
+    private long currentFileSize = -1;
+
+    // 缓存日志文件路径，避免每次 append 都重复创建 Path 对象
+    private volatile Path cachedLogFilePath;
+
+    // 标记父目录已确认存在，避免每次 append 都调用 Files.exists()
+    private volatile boolean parentDirectoryEnsured;
 
     public static McpRuntimeLogService getInstance() {
         return ApplicationManager.getApplication().getService(McpRuntimeLogService.class);
@@ -111,62 +129,133 @@ public final class McpRuntimeLogService {
     }
 
     /**
-     * 获取最后 MAX_ENTRIES 条日志
-     * 使用高效的反向读取，避免一次性加载整个大文件到内存
+     * 获取最后 MAX_ENTRIES 条日志。
+     * 从内存环形缓冲区直接返回，避免每秒从磁盘读取整个日志文件。
      */
     public List<String> list() {
         lock.lock();
         try {
-            Path path = logFilePath();
-            if (!Files.exists(path)) {
-                return List.of();
+            if (memoryBuffer.isEmpty()) {
+                // 首次调用或 clear 后，从磁盘加载一次填充缓冲区
+                loadMemoryBufferFromDisk();
             }
-            return readLastNLines(path, getMaxEntries());
-        } catch (IOException ex) {
-            LOG.warn("Failed to read runtime log file", ex);
-            return List.of();
+            return new ArrayList<>(memoryBuffer);
         } finally {
             lock.unlock();
         }
     }
 
     /**
-     * 搜索日志
-     * 只在最近的 MAX_ENTRIES 条日志中搜索，避免搜索过多数据
+     * 增量日志快照，供 UI 层增量渲染使用。
+     *
+     * @param appended     相对 {@code sinceVersion} 新增的行（按时间顺序）
+     * @param keptOldLines UI 应当保留的、已渲染的"老行"数量；差值即需要从 document 开头裁剪的行数
+     * @param version      本次返回的当前版本号，UI 下次传入以获取新增
+     * @param fullReset    true 表示 UI 应当丢弃已渲染内容并用 {@code appended} 重建（首次调用 / clear 后 / 超出环形缓冲窗口）
+     */
+    public record LogSnapshot(List<String> appended, int keptOldLines, long version, boolean fullReset) {
+    }
+
+    /**
+     * 获取自 {@code sinceVersion} 之后的日志增量。
+     * 调用者应按返回的 {@link LogSnapshot#fullReset} 决定是全量重建还是在已渲染内容之上做增量追加。
+     *
+     * <p>当 {@code sinceVersion <= 0} 或请求区间已超出环形缓冲窗口时，返回 {@code fullReset=true} + 完整快照；
+     * 否则返回 {@code (appended, keptOldLines)} 供 UI 增量更新。
+     *
+     * @param sinceVersion UI 上次渲染对应的版本号；首次传 0 或负数
+     */
+    public LogSnapshot listSince(long sinceVersion) {
+        lock.lock();
+        try {
+            if (memoryBuffer.isEmpty()) {
+                loadMemoryBufferFromDisk();
+            }
+            long current = version.get();
+            int bufSize = memoryBuffer.size();
+            // 缓冲区中第一行对应的 version 值：current - bufSize + 1
+            // （append 时先 addLast 再 incrementAndGet，因此最后一行的 version 等于 current）
+            long firstBuffered = current - bufSize + 1;
+
+            // 全量重建：首次 / 已超出窗口
+            if (sinceVersion <= 0 || sinceVersion < firstBuffered - 1) {
+                return new LogSnapshot(new ArrayList<>(memoryBuffer), 0, current, true);
+            }
+            // 无新增
+            if (sinceVersion >= current) {
+                return new LogSnapshot(List.of(), bufSize, current, false);
+            }
+
+            // 增量：sinceVersion 之前的行数 = sinceVersion - firstBuffered + 1
+            int renderedInBuffer = (int) (sinceVersion - firstBuffered + 1);
+            int appendedCount = bufSize - renderedInBuffer;
+            List<String> appended = new ArrayList<>(appendedCount);
+            int idx = 0;
+            for (String l : memoryBuffer) {
+                if (idx++ >= renderedInBuffer) {
+                    appended.add(l);
+                }
+            }
+            return new LogSnapshot(appended, renderedInBuffer, current, false);
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    /**
+     * 搜索日志。
+     * 从内存缓冲区搜索，避免磁盘 IO；使用 regionMatches 做大小写无关匹配，避免每行 toLowerCase 产生临时字符串。
      */
     public List<String> search(String query) {
-        String q = query == null ? "" : query.trim().toLowerCase(Locale.ROOT);
+        String q = query == null ? "" : query.trim();
         if (q.isEmpty()) {
             return list();
         }
 
         lock.lock();
         try {
-            Path path = logFilePath();
-            if (!Files.exists(path)) {
-                return List.of();
+            if (memoryBuffer.isEmpty()) {
+                loadMemoryBufferFromDisk();
             }
-
-            // 只在最近的日志行中搜索
-            List<String> recentLines = readLastNLines(path, getMaxEntries());
             List<String> matched = new ArrayList<>();
-            for (String line : recentLines) {
-                if (line.toLowerCase(Locale.ROOT).contains(q)) {
+            for (String line : memoryBuffer) {
+                if (containsIgnoreCase(line, q)) {
                     matched.add(line);
                 }
             }
             return matched;
-        } catch (IOException ex) {
-            LOG.warn("Failed to search runtime log file", ex);
-            return List.of();
         } finally {
             lock.unlock();
         }
     }
 
+    /**
+     * 大小写无关子串匹配，基于 {@link String#regionMatches(boolean, int, String, int, int)} 零分配实现。
+     */
+    private static boolean containsIgnoreCase(String haystack, String needle) {
+        int hLen = haystack.length();
+        int nLen = needle.length();
+        if (nLen == 0) {
+            return true;
+        }
+        if (hLen < nLen) {
+            return false;
+        }
+        int max = hLen - nLen;
+        for (int i = 0; i <= max; i++) {
+            if (haystack.regionMatches(true, i, needle, 0, nLen)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
     public void clear() {
         lock.lock();
         try {
+            memoryBuffer.clear();
+            currentFileSize = 0;
+            version.incrementAndGet();
             Path path = logFilePath();
             ensureParent(path);
             Files.writeString(path, "", StandardCharsets.UTF_8,
@@ -184,6 +273,14 @@ public final class McpRuntimeLogService {
         return logFilePath().toAbsolutePath().toString();
     }
 
+    /**
+     * 返回当前日志内容版本号。每次 append / clear 都会递增。
+     * UI 轮询时可先比对版本号，未变化时直接跳过后续的拷贝与拼接。
+     */
+    public long version() {
+        return version.get();
+    }
+
     private void append(String level, String message) {
         String line = String.format(Locale.ROOT, "%s [%s] %s", LocalDateTime.now().format(DATATIME_FORMAT), level, message);
 
@@ -197,18 +294,35 @@ public final class McpRuntimeLogService {
 
         lock.lock();
         try {
+            // 同步写入内存环形缓冲区
+            int maxEntries = getMaxEntries();
+            if (memoryBuffer.size() >= maxEntries) {
+                memoryBuffer.removeFirst();
+            }
+            memoryBuffer.addLast(line);
+            version.incrementAndGet();
+
+            // 写入磁盘文件
             Path path = logFilePath();
             ensureParent(path);
 
-            // 检查文件大小，如果超过限制则进行轮转
-            if (Files.exists(path) && Files.size(path) >= getMaxFileSize()) {
-                rotateLogFile(path);
+            // 延迟初始化文件大小追踪
+            if (currentFileSize < 0) {
+                currentFileSize = Files.exists(path) ? Files.size(path) : 0;
             }
 
-            Files.writeString(path, line + System.lineSeparator(), StandardCharsets.UTF_8,
+            // 使用追踪的文件大小判断是否需要轮转，避免每次调用 Files.size()
+            if (currentFileSize >= getMaxFileSize()) {
+                rotateLogFile(path);
+                currentFileSize = 0;
+            }
+
+            byte[] bytes = (line + System.lineSeparator()).getBytes(StandardCharsets.UTF_8);
+            Files.write(path, bytes,
                     StandardOpenOption.CREATE,
                     StandardOpenOption.APPEND,
                     StandardOpenOption.WRITE);
+            currentFileSize += bytes.length;
         } catch (IOException ex) {
             LOG.warn("Failed to append runtime log file", ex);
         } finally {
@@ -217,20 +331,38 @@ public final class McpRuntimeLogService {
     }
 
     private Path logFilePath() {
-        return Path.of(PathManager.getLogPath(), LOG_FILE_NAME);
+        Path path = cachedLogFilePath;
+        if (path == null) {
+            path = Path.of(PathManager.getLogPath(), LOG_FILE_NAME);
+            cachedLogFilePath = path;
+        }
+        return path;
     }
 
     private void ensureParent(Path path) throws IOException {
+        if (parentDirectoryEnsured) {
+            return;
+        }
         Path parent = path.getParent();
         if (parent != null && !Files.exists(parent)) {
             Files.createDirectories(parent);
         }
+        parentDirectoryEnsured = true;
     }
 
     /**
-     * 高效读取文件末尾的最后 N 行日志
-     * 使用反向缓冲读取，避免一次性加载整个文件到内存
-     * 对于大文件（MB级别），仅加载末尾512KB数据
+     * 高效读取文件末尾的最后 N 行日志。
+     *
+     * <p>实现策略：
+     * <ul>
+     *   <li>小文件（≤ {@code tailWindowBytes}）：直接顺序读取。</li>
+     *   <li>大文件：用 {@link FileChannel} 直接 seek 到文件尾部窗口起点，仅读取尾部数据，
+     *       避免整文件扫描；由于 seek 位置可能落在多字节 UTF-8 字符中间，统一丢弃窗口中
+     *       的第一行（可能是半截），其后的行均为完整行。</li>
+     * </ul>
+     *
+     * <p>首次打开 ToolWindow 或 clear 后首次调用 {@code list()} 时会走此路径，
+     * 优化后 IO 量从"整文件大小"降至"几百 KB"量级。
      */
     private List<String> readLastNLines(Path path, int maxLines) throws IOException {
         if (maxLines <= 0 || !Files.exists(path)) {
@@ -242,18 +374,30 @@ public final class McpRuntimeLogService {
             return List.of();
         }
 
-        // Read with UTF-8 line decoder to avoid breaking multibyte characters (e.g. Chinese).
+        int bufferSize = getReadBufferSize();
+        // 尾部窗口：至少 512KB，或按每行约 1KB 估算以覆盖 maxLines 行；取较大者并与文件大小比较
+        long tailWindowBytes = Math.max(512L * 1024L, (long) maxLines * 1024L);
+        long startOffset = fileSize > tailWindowBytes ? fileSize - tailWindowBytes : 0L;
+        boolean skipFirstPartialLine = startOffset > 0;
+
         ArrayDeque<String> tail = new ArrayDeque<>(Math.min(maxLines, 4096));
-        try (BufferedReader reader = new BufferedReader(
-                new InputStreamReader(Files.newInputStream(path), StandardCharsets.UTF_8),
-                getReadBufferSize()
-        )) {
-            String line;
-            while ((line = reader.readLine()) != null) {
-                if (tail.size() == maxLines) {
-                    tail.removeFirst();
+        try (FileChannel channel = FileChannel.open(path, StandardOpenOption.READ)) {
+            channel.position(startOffset);
+            try (BufferedReader reader = new BufferedReader(
+                    new InputStreamReader(Channels.newInputStream(channel), StandardCharsets.UTF_8),
+                    bufferSize
+            )) {
+                if (skipFirstPartialLine) {
+                    // 首行可能落在多字节字符中间或是不完整的上一行，直接丢弃确保后续行边界正确
+                    reader.readLine();
                 }
-                tail.addLast(line);
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    if (tail.size() == maxLines) {
+                        tail.removeFirst();
+                    }
+                    tail.addLast(line);
+                }
             }
         }
         return new ArrayList<>(tail);
@@ -323,5 +467,25 @@ public final class McpRuntimeLogService {
                 LOG.warn("Failed to clean old log files", ex);
             }
         });
+    }
+
+    /**
+     * 从磁盘日志文件加载最后 N 行填充内存缓冲区。
+     * 仅在首次调用 list()/search() 或 clear() 后执行一次。
+     * 调用方必须持有 lock。
+     */
+    private void loadMemoryBufferFromDisk() {
+        try {
+            Path path = logFilePath();
+            if (!Files.exists(path)) {
+                return;
+            }
+            List<String> lines = readLastNLines(path, getMaxEntries());
+            memoryBuffer.clear();
+            memoryBuffer.addAll(lines);
+            currentFileSize = Files.size(path);
+        } catch (IOException ex) {
+            LOG.warn("Failed to load memory buffer from disk", ex);
+        }
     }
 }
